--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplicacionJavaStock
 excludes=
+file.reference.flatlaf-3.2.5.jar=librerias\\flatlaf-3.2.5.jar
+file.reference.flatlaf-extras-3.2.5.jar=librerias\\flatlaf-extras-3.2.5.jar
 file.reference.miglayout-4.0.jar=librerias\\miglayout-4.0.jar
 file.reference.TimingFramework-0.55.jar=librerias\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
-    ${file.reference.miglayout-4.0.jar}
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.flatlaf-3.2.5.jar}:\
+    ${file.reference.flatlaf-extras-3.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
