--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,20 @@ dist.jlink.output=${dist.jlink.dir}/AplicacionJavaStock
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.2.5.jar=librerias\\flatlaf-3.2.5.jar
+file.reference.flatlaf-3.4.1.jar=librerias\\flatlaf\\flatlaf-3.4.1.jar
 file.reference.flatlaf-extras-3.2.5.jar=librerias\\flatlaf-extras-3.2.5.jar
+file.reference.flatlaf-extras-3.4.1.jar=librerias\\flatlaf\\flatlaf-extras-3.4.1.jar
+file.reference.flatlaf-fonts-roboto-2.137.jar=librerias\\flatlaf\\flatlaf-fonts-roboto-2.137.jar
+file.reference.jna-5.5.0.jar=librerias\\jna-5.5.0.jar
+file.reference.jsvg-1.4.0.jar=librerias\\flatlaf\\jsvg-1.4.0.jar
 file.reference.miglayout-4.0.jar=librerias\\miglayout-4.0.jar
+file.reference.miglayout-core.jar=librerias\\miglayout-core.jar
+file.reference.miglayout-swing.jar=librerias\\miglayout-swing.jar
+file.reference.modal-dialog-1.0.4.jar=librerias\\modal-dialog-1.0.4.jar
+file.reference.picture-box-1.2.jar=librerias\\picture-box-1.2.jar
+file.reference.swing-datetime-picker-1.3.0.jar=librerias\\swing-datetime-picker-1.3.0.jar
+file.reference.swing-jnafilechooser.jar=librerias\\swing-jnafilechooser.jar
+file.reference.thumbnailator-0.4.20.jar=librerias\\thumbnailator-0.4.20.jar
 file.reference.TimingFramework-0.55.jar=librerias\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
@@ -45,7 +57,19 @@ javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
     ${file.reference.flatlaf-3.2.5.jar}:\
-    ${file.reference.flatlaf-extras-3.2.5.jar}
+    ${file.reference.flatlaf-extras-3.2.5.jar}:\
+    ${file.reference.flatlaf-3.4.1.jar}:\
+    ${file.reference.flatlaf-extras-3.4.1.jar}:\
+    ${file.reference.flatlaf-fonts-roboto-2.137.jar}:\
+    ${file.reference.jsvg-1.4.0.jar}:\
+    ${file.reference.jna-5.5.0.jar}:\
+    ${file.reference.miglayout-core.jar}:\
+    ${file.reference.miglayout-swing.jar}:\
+    ${file.reference.modal-dialog-1.0.4.jar}:\
+    ${file.reference.picture-box-1.2.jar}:\
+    ${file.reference.swing-datetime-picker-1.3.0.jar}:\
+    ${file.reference.swing-jnafilechooser.jar}:\
+    ${file.reference.thumbnailator-0.4.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
