--- a/src/com/raven/style/FlatLaf.properties
+++ b/src/com/raven/style/FlatLaf.properties
@@ -1,5 +1,5 @@
 # Define colores personalizados
-@accentColor=#FF6666
+@accentColor=#e91f64
 
 Button.background = @accentColor
 Button.foreground = #FFFFFF
