--- a/src/com/raven/style/FlatLaf.properties
+++ b/src/com/raven/style/FlatLaf.properties
@@ -1,5 +1,5 @@
 # Define colores personalizados
-@accentColor=#e91f64
+@accentColor=#6A618C
 
 Button.background = @accentColor
 Button.foreground = #FFFFFF
