--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.jsvg-1.4.0.jar=librerias\\flatlaf\\jsvg-1.4.0.jar
 file.reference.miglayout-4.0.jar=librerias\\miglayout-4.0.jar
 file.reference.miglayout-core.jar=librerias\\miglayout-core.jar
 file.reference.miglayout-swing.jar=librerias\\miglayout-swing.jar
+file.reference.modal-dialog-1.0.4.jar=librerias\\modal-dialog-1.0.4.jar
 file.reference.picture-box-1.2.jar=librerias\\picture-box-1.2.jar
 file.reference.swing-datetime-picker-1.2.0.jar=librerias\\swing-datetime-picker-1.2.0.jar
 file.reference.swing-glasspane-popup-1.5.0.jar=librerias\\swing-glasspane-popup-1.5.0.jar
@@ -67,7 +68,8 @@ javac.classpath=\
     ${file.reference.swing-glasspane-popup-1.5.0.jar}:\
     ${file.reference.swing-jnafilechooser.jar}:\
     ${file.reference.swing-toast-notifications-1.0.2.jar}:\
-    ${file.reference.thumbnailator-0.4.20.jar}
+    ${file.reference.thumbnailator-0.4.20.jar}:\
+    ${file.reference.modal-dialog-1.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
