--- a/src/com/raven/style/FlatLaf.properties
+++ b/src/com/raven/style/FlatLaf.properties
@@ -7,3 +7,12 @@ Button.foreground = #FFFFFF
 
 TitlePane.unifiedBackground=false
 TitlePane.buttonSize=35,20
+
+Component.focusWidth=1;
+Component.arc=10;
+Button.arc=10;
+TextComponent.arc=10;
+Button.margin=5,5,5,5;
+FormattedTextField.margin=5,5,5,5;
+TextField.margin=5,5,5,5;
+ComboBox.padding=5,5,5,5;
