--- a/src/com/raven/style/FlatLaf.properties
+++ b/src/com/raven/style/FlatLaf.properties
@@ -16,3 +16,9 @@ Button.margin=5,5,5,5
 FormattedTextField.margin=5,5,5,5
 TextField.margin=5,5,5,5
 ComboBox.padding=5,5,5,5
+
+Popup.forceHeavyWeight=true
+
+ScrollPane.TextComponent.arc=10
+TextArea.margin=3,1,3,1
+
