--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,15 +35,27 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplicacionJavaStock
 endorsed.classpath=
 excludes=
+file.reference.commons-dbcp2-2.12.0.jar=librerias\\jdbc\\commons-dbcp2-2.12.0.jar
+file.reference.commons-logging-1.3.0.jar=librerias\\jdbc\\commons-logging-1.3.0.jar
+file.reference.commons-pool2-2.12.0.jar=librerias\\jdbc\\commons-pool2-2.12.0.jar
 file.reference.flatlaf-3.4.1.jar=librerias\\flatlaf\\flatlaf-3.4.1.jar
 file.reference.flatlaf-extras-3.4.1.jar=librerias\\flatlaf\\flatlaf-extras-3.4.1.jar
 file.reference.flatlaf-fonts-roboto-2.137.jar=librerias\\flatlaf\\flatlaf-fonts-roboto-2.137.jar
+file.reference.jakarta.persistence-2.2.3.jar=librerias\\eclipselink\\jakarta.persistence-2.2.3.jar
 file.reference.jna-5.5.0.jar=librerias\\jna-5.5.0.jar
 file.reference.jsvg-1.4.0.jar=librerias\\flatlaf\\jsvg-1.4.0.jar
 file.reference.miglayout-4.0.jar=librerias\\miglayout-4.0.jar
 file.reference.miglayout-core.jar=librerias\\miglayout-core.jar
 file.reference.miglayout-swing.jar=librerias\\miglayout-swing.jar
 file.reference.modal-dialog-1.0.4.jar=librerias\\modal-dialog-1.0.4.jar
+file.reference.mysql-connector-j-8.3.0.jar=librerias\\jdbc\\mysql-connector-j-8.3.0.jar
+file.reference.org.eclipse.persistence.antlr-2.7.12.jar=librerias\\eclipselink\\org.eclipse.persistence.antlr-2.7.12.jar
+file.reference.org.eclipse.persistence.asm-9.4.0.jar=librerias\\eclipselink\\org.eclipse.persistence.asm-9.4.0.jar
+file.reference.org.eclipse.persistence.core-2.7.12.jar=librerias\\eclipselink\\org.eclipse.persistence.core-2.7.12.jar
+file.reference.org.eclipse.persistence.jpa-2.7.12.jar=librerias\\eclipselink\\org.eclipse.persistence.jpa-2.7.12.jar
+file.reference.org.eclipse.persistence.jpa.jpql-2.7.12.jar=librerias\\eclipselink\\org.eclipse.persistence.jpa.jpql-2.7.12.jar
+file.reference.org.eclipse.persistence.jpa.modelgen.processor-2.7.12.jar=librerias\\eclipselink\\org.eclipse.persistence.jpa.modelgen.processor-2.7.12.jar
+file.reference.org.eclipse.persistence.moxy-2.7.12.jar=librerias\\eclipselink\\org.eclipse.persistence.moxy-2.7.12.jar
 file.reference.picture-box-1.2.jar=librerias\\picture-box-1.2.jar
 file.reference.swing-datetime-picker-1.2.0.jar=librerias\\swing-datetime-picker-1.2.0.jar
 file.reference.swing-glasspane-popup-1.5.0.jar=librerias\\swing-glasspane-popup-1.5.0.jar
@@ -69,7 +81,19 @@ javac.classpath=\
     ${file.reference.swing-jnafilechooser.jar}:\
     ${file.reference.swing-toast-notifications-1.0.2.jar}:\
     ${file.reference.thumbnailator-0.4.20.jar}:\
-    ${file.reference.modal-dialog-1.0.4.jar}
+    ${file.reference.modal-dialog-1.0.4.jar}:\
+    ${file.reference.jakarta.persistence-2.2.3.jar}:\
+    ${file.reference.org.eclipse.persistence.antlr-2.7.12.jar}:\
+    ${file.reference.org.eclipse.persistence.asm-9.4.0.jar}:\
+    ${file.reference.org.eclipse.persistence.core-2.7.12.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa-2.7.12.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa.jpql-2.7.12.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa.modelgen.processor-2.7.12.jar}:\
+    ${file.reference.org.eclipse.persistence.moxy-2.7.12.jar}:\
+    ${file.reference.commons-dbcp2-2.12.0.jar}:\
+    ${file.reference.commons-logging-1.3.0.jar}:\
+    ${file.reference.commons-pool2-2.12.0.jar}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
