--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.commons-pool2-2.12.0.jar=librerias\\jdbc\\commons-pool2-2.12.0.ja
 file.reference.flatlaf-3.4.1.jar=librerias\\flatlaf\\flatlaf-3.4.1.jar
 file.reference.flatlaf-extras-3.4.1.jar=librerias\\flatlaf\\flatlaf-extras-3.4.1.jar
 file.reference.flatlaf-fonts-roboto-2.137.jar=librerias\\flatlaf\\flatlaf-fonts-roboto-2.137.jar
+file.reference.itext5-itextpdf-5.5.12.jar=librerias\\itext5-itextpdf-5.5.12.jar
 file.reference.jakarta.persistence-2.2.3.jar=librerias\\eclipselink\\jakarta.persistence-2.2.3.jar
 file.reference.jna-5.5.0.jar=librerias\\jna-5.5.0.jar
 file.reference.jsvg-1.4.0.jar=librerias\\flatlaf\\jsvg-1.4.0.jar
@@ -94,7 +95,8 @@ javac.classpath=\
     ${file.reference.commons-dbcp2-2.12.0.jar}:\
     ${file.reference.commons-logging-1.3.0.jar}:\
     ${file.reference.commons-pool2-2.12.0.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
