--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.jlink.output=${dist.jlink.dir}/AplicacionJavaStock
 endorsed.classpath=
 excludes=
 file.reference.commons-collections4-4.1.jar=C:\\Users\\criss\\OneDrive\\Escritorio\\poi-3.16\\lib\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-1=librerias\\Excel\\poi-3.16\\commons-collections4-4.1.jar
 file.reference.commons-dbcp2-2.12.0.jar=librerias\\jdbc\\commons-dbcp2-2.12.0.jar
 file.reference.commons-logging-1.3.0.jar=librerias\\jdbc\\commons-logging-1.3.0.jar
 file.reference.commons-pool2-2.12.0.jar=librerias\\jdbc\\commons-pool2-2.12.0.jar
@@ -61,8 +62,11 @@ file.reference.org.eclipse.persistence.jpa.modelgen.processor-2.7.12.jar=libreri
 file.reference.org.eclipse.persistence.moxy-2.7.12.jar=librerias\\eclipselink\\org.eclipse.persistence.moxy-2.7.12.jar
 file.reference.picture-box-1.2.jar=librerias\\picture-box-1.2.jar
 file.reference.poi-3.16.jar=C:\\Users\\criss\\OneDrive\\Escritorio\\poi-3.16\\poi-3.16.jar
+file.reference.poi-3.16.jar-1=librerias\\Excel\\poi-3.16\\poi-3.16.jar
 file.reference.poi-ooxml-3.16.jar=C:\\Users\\criss\\OneDrive\\Escritorio\\poi-3.16\\poi-ooxml-3.16.jar
+file.reference.poi-ooxml-3.16.jar-1=librerias\\Excel\\poi-3.16\\poi-ooxml-3.16.jar
 file.reference.poi-ooxml-schemas-3.16.jar=C:\\Users\\criss\\OneDrive\\Escritorio\\poi-3.16\\poi-ooxml-schemas-3.16.jar
+file.reference.poi-ooxml-schemas-3.16.jar-1=librerias\\Excel\\poi-3.16\\poi-ooxml-schemas-3.16.jar
 file.reference.swing-datetime-picker-1.2.0.jar=librerias\\swing-datetime-picker-1.2.0.jar
 file.reference.swing-glasspane-popup-1.5.0.jar=librerias\\swing-glasspane-popup-1.5.0.jar
 file.reference.swing-jnafilechooser.jar=librerias\\swing-jnafilechooser.jar
@@ -70,6 +74,7 @@ file.reference.swing-toast-notifications-1.0.2.jar=librerias\\swing-toast-notifi
 file.reference.thumbnailator-0.4.20.jar=librerias\\thumbnailator-0.4.20.jar
 file.reference.TimingFramework-0.55.jar=librerias\\TimingFramework-0.55.jar
 file.reference.xmlbeans-2.6.0.jar=C:\\Users\\criss\\OneDrive\\Escritorio\\poi-3.16\\ooxml-lib\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=librerias\\Excel\\poi-3.16\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -106,7 +111,12 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.16.jar}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.poi-3.16.jar-1}:\
+    ${file.reference.poi-ooxml-3.16.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.16.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
