--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplicacionJavaStock
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.1.jar=librerias\\Excel\\poi-3.16\\commons-collections4-4.1.jar
 file.reference.commons-dbcp2-2.12.0.jar=librerias\\jdbc\\commons-dbcp2-2.12.0.jar
 file.reference.commons-logging-1.3.0.jar=librerias\\jdbc\\commons-logging-1.3.0.jar
 file.reference.commons-pool2-2.12.0.jar=librerias\\jdbc\\commons-pool2-2.12.0.jar
@@ -69,6 +70,7 @@ file.reference.swing-jnafilechooser.jar=librerias\\swing-jnafilechooser.jar
 file.reference.swing-toast-notifications-1.0.2.jar=librerias\\swing-toast-notifications-1.0.2.jar
 file.reference.thumbnailator-0.4.20.jar=librerias\\thumbnailator-0.4.20.jar
 file.reference.TimingFramework-0.55.jar=librerias\\TimingFramework-0.55.jar
+file.reference.xmlbeans-2.6.0.jar=librerias\\Excel\\poi-3.16\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -104,7 +106,9 @@ javac.classpath=\
     ${file.reference.poi-3.16.jar-1}:\
     ${file.reference.poi-ooxml-3.16.jar-1}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar-1}:\
-    ${file.reference.gradient-icon-font.jar}
+    ${file.reference.gradient-icon-font.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
