--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,6 +44,7 @@ file.reference.commons-pool2-2.12.0.jar=librerias\\jdbc\\commons-pool2-2.12.0.ja
 file.reference.flatlaf-3.4.1.jar=librerias\\flatlaf\\flatlaf-3.4.1.jar
 file.reference.flatlaf-extras-3.4.1.jar=librerias\\flatlaf\\flatlaf-extras-3.4.1.jar
 file.reference.flatlaf-fonts-roboto-2.137.jar=librerias\\flatlaf\\flatlaf-fonts-roboto-2.137.jar
+file.reference.gradient-icon-font.jar=librerias\\gradient-icon-font.jar
 file.reference.itext5-itextpdf-5.5.12.jar=librerias\\itext5-itextpdf-5.5.12.jar
 file.reference.jakarta.persistence-2.2.3.jar=librerias\\eclipselink\\jakarta.persistence-2.2.3.jar
 file.reference.jna-5.5.0.jar=librerias\\jna-5.5.0.jar
@@ -116,7 +117,8 @@ javac.classpath=\
     ${file.reference.poi-3.16.jar-1}:\
     ${file.reference.poi-ooxml-3.16.jar-1}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar-1}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.gradient-icon-font.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
