--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -108,8 +108,7 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.16.jar-1}:\
     ${file.reference.gradient-icon-font.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.commons-collections4-4.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.commons-collections4-4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
